# esp32c3-doorbell

./: .gitignore  Cargo.toml  hass_udp_webhook_router.py  plot_server.py  socket_plotter.py  socket_printer.py  udp_printer.py
.cargo/: config.toml
src/: adc_tester.rs  fancy_blinky.rs  gpio_reporter_interrupt.rs  gpio_reporter_nointerrupt.rs  main.rs
