[package]
name = "esp32c3_doorbell"
version = "0.1.0"
authors = ["Erik Tollerud <erik.tollerud@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.11.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["esp32c3"] }
esp-alloc = { version = "0.3.0" }
critical-section = { version = "1.1.1" }
ringbuf = { version = "0.3.3", default-features = false }
micromath = { version = "2.0.0" }
smoltcp = { version = "0.10.0", default-features = false, features=["socket-raw", "socket-dns", "socket-udp", "socket-tcp", "socket-icmp",
                                                                    "proto-igmp", "proto-dns", "proto-ipv4", "proto-dhcpv4"] }
embedded-svc = { version = "0.25.1", default-features = false, features = [] }
heapless = { version = "0.7.16", default-features = false, features = ["ufmt-impl"] }

[dependencies.esp-wifi]
git = "https://github.com/esp-rs/esp-wifi.git"
# `esp-wifi` is in active development. It is often a good idea to lock it to a specific commit
rev = "b8bddffa46605a082610e8fc2fea90af98dacb3d"
# A supported chip needs to be specified, as well as specific use-case features 
features = ["esp32c3", "wifi"]

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
lto = "off"
[profile.release]
lto = "off"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "gpio_reporter"
path = "src/gpio_reporter_nointerrupt.rs"

[[bin]]
name = "adc_tester"
path = "src/adc_tester.rs"